--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
         id: launch_task
         run: |
           echo "TASK_ID=$(
-            clearml-task --project SyntaxSquad --name 'CI: Test remote runnable' --branch ${{ github.head_ref }} --script cicid/example_task.py --skip-task-init --queue $QUEUE | rg -o 'Task id=(.*) sent' -r '$1'
+            clearml-task --project SyntaxSquad --name 'CI: Test remote runnable' --branch ${{ github.head_ref }} --script cicd/example_task.py --skip-task-init --queue $QUEUE | rg -o 'Task id=(.*) sent' -r '$1'
           )" >> $GITHUB_OUTPUT
 
       - name: 👉 Step 6 - Poll for task progress
