--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,9 +48,14 @@ jobs:
       - name: 👉 Step 5 - Make sure the task can run remotely
         id: launch_task
         run: |
-          echo "TASK_ID=$(
-            clearml-task --project SyntaxSquad --name 'CI: Test remote runnable' --branch ${{ github.head_ref }} --script cicd/example_task.py --skip-task-init --queue ${{ QUEUE }} | rg -o 'Task id=(.*) sent' -r '$1'
-          )" >> $GITHUB_OUTPUT
+          TASK_ID=$(clearml-task \
+            --project SyntaxSquad \
+            --name 'CI: Test remote runnable' \
+            --branch ${{ github.head_ref }} \
+            --script cicd/example_task.py \
+            --skip-task-init --queue "$QUEUE" \
+          | rg -o 'Task id=(.*) sent' -r '$1')
+          echo "TASK_ID=${TASK_ID}" >> $GITHUB_OUTPUT
 
       - name: 👉 Step 6 - Poll for task progress
         run: |
