--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,8 +1,8 @@
-name: CD Pipeline
+name: CD Pipeline Automation
 
 on:
   workflow_run:
-    workflows: ["CI Checks"]
+    workflows: ["CI Quality Checks"]
     types: [ completed ]
     branches: [ main ]
 
