--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,9 +1,11 @@
 name: CD Pipeline Automation
 
 on:
-  workflow_run:
-    workflows: ["CI Quality Checks"]
-    types: [ completed ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+    types: [ assigned, opened, edited, reopened, synchronize ]
 
 jobs:
   execute-pipeline:
