SCRUM-135 Refactor CD pipeline triggers to correctly use workflow_run for CI Quality Checks completion

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,15 +1,15 @@
 name: CD Pipeline Automation
 
 on:
-  push:
+  workflow_run:
+    workflows: [ CI Quality Checks ]
+    types: [ completed ]
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-    types: [ assigned, opened, edited, reopened, synchronize ]
 
 jobs:
   execute-pipeline:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     env: # ✅ env: Global environment variables for all steps
       CLEARML_API_HOST: ${{ secrets.CLEARML_API_HOST }}
