--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -18,20 +18,17 @@ jobs:
       QUEUE: Remote_CPU
 
     steps:
-      - &step0
       - name: 👉 Step 0 - Check the event type
         run: |
           echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
           echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
           echo "🔎 The name of current branch is ${{ github.ref }} and the repository is ${{ github.repository }}."
 
-      - &step1
       - name: 👉 Step 1 - Checkout the repository
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       
-      - &step2
       - name: 👉 Step 2 - Set up Python
         uses: actions/setup-python@v4
         with:
@@ -71,9 +68,22 @@ jobs:
       CLEARML_API_SECRET_KEY: ${{ secrets.CLEARML_API_SECRET_KEY }}
 
     steps:
-      - *step0
-      - *step1
-      - *step2
+      - name: 👉 Step 0 - Check the event type
+        run: |
+          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+          echo "🔎 The name of current branch is ${{ github.ref }} and the repository is ${{ github.repository }}."
+
+      - name: 👉 Step 1 - Checkout the repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      
+      - name: 👉 Step 2 - Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.12'
+
       - name: 👉 Step 3 - Install ClearML
         run: |
           python -m pip install --upgrade pip clearml
@@ -96,9 +106,22 @@ jobs:
       COMMIT_ID: ${{ github.event.pull_request.head.sha }}
 
     steps:
-      - *step0
-      - *step1
-      - *step2
+      - name: 👉 Step 0 - Check the event type
+        run: |
+          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+          echo "🔎 The name of current branch is ${{ github.ref }} and the repository is ${{ github.repository }}."
+
+      - name: 👉 Step 1 - Checkout the repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      
+      - name: 👉 Step 2 - Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.12'
+
       - name: 👉 Step 3 - Install dependencies
         run: |
           python -m pip install --upgrade pip 
@@ -121,9 +144,22 @@ jobs:
       COMMIT_ID: ${{ github.event.pull_request.head.sha }}
 
     steps:
-      - *step0
-      - *step1
-      - *step2
+      - name: 👉 Step 0 - Check the event type
+        run: |
+          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+          echo "🔎 The name of current branch is ${{ github.ref }} and the repository is ${{ github.repository }}."
+
+      - name: 👉 Step 1 - Checkout the repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      
+      - name: 👉 Step 2 - Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.12'
+
       - name: 👉 Step 3 - Install dependencies
         run: |
           python -m pip install --upgrade pip 
@@ -146,9 +182,22 @@ jobs:
       FASTAPI_PORT: 8000
 
     steps:
-      - *step0
-      - *step1
-      - *step2
+      - name: 👉 Step 0 - Check the event type
+        run: |
+          echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+          echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+          echo "🔎 The name of current branch is ${{ github.ref }} and the repository is ${{ github.repository }}."
+
+      - name: 👉 Step 1 - Checkout the repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      
+      - name: 👉 Step 2 - Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.12'
+          
       - name: 👉 Step 3 - Install dependencies
         run: |
           python -m pip install --upgrade pip 
